erro.txt
PS C:\Users\ausco\audio-capture\build> cmake --build . > error.txt
In file included from C:/Users/ausco/audio-capture/include/MicCapture.h:3,
                 from C:\Users\ausco\audio-capture\src\main.cpp:4:
C:/Users/ausco/audio-capture/include/AudioCapture.h:51:5: error: 'WavWriter' does not name a type
   51 |     WavWriter *m_writer;
      |     ^~~~~~~~~
C:\Users\ausco\audio-capture\src\main.cpp: In function 'int main()':
C:\Users\ausco\audio-capture\src\main.cpp:8:21: error: 'LoopbackCapture' was not declared in this scope
    8 |     std::unique_ptr<LoopbackCapture> speakerCapture;
      |                     ^~~~~~~~~~~~~~~
C:\Users\ausco\audio-capture\src\main.cpp:8:36: error: template argument 1 is invalid     
    8 |     std::unique_ptr<LoopbackCapture> speakerCapture;
      |                                    ^
C:\Users\ausco\audio-capture\src\main.cpp:8:36: error: template argument 2 is invalid     
C:\Users\ausco\audio-capture\src\main.cpp:17:55: error: no matching function for call to make_unique<LoopbackCapture>()'
   17 |     speakerCapture = std::make_unique<LoopbackCapture>();
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
C:\Users\ausco\audio-capture\src\main.cpp:17:55: note: there are 3 candidates
In file included from C:/ProgramData/mingw64/mingw64/lib/gcc/x86_64-w64-mingw32/15.2.0/include/c++/memory:80,
                 from C:\Users\ausco\audio-capture\src\main.cpp:2:
C:/ProgramData/mingw64/mingw64/lib/gcc/x86_64-w64-mingw32/15.2.0/include/c++/bits/unique_ptr.h:1084:5: note: candidate 1: 'template<class _Tp, class ... _Args> std::__detail::__unique_ptr_t<_Tp> std::make_unique(_Args&& ...)'
 1084 |     make_unique(_Args&&... __args)